flask-demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-demo
  template:
    metadata:
      labels:
        app: flask-demo
    spec:
      containers:
      - name: flask-demo
        image: harbor-k8s.shinezone.com/ops/flask-demo:<BUILD_TAG>
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              #command: ["/bin/sh", "-c", "echo Test > /tmp/test.txt"]
              command: ['/bin/sed','-i','"s/s_hostname/$(hostname)/" /data1/www/templates/app.html']
        ports:
        - name: http
          containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: flask-demo
  labels:
    app: flask-demo
spec:
  selector:
    app: flask-demo
  type: NodePort
  ports:
  - name: http
    port: 5000
    targetPort: 5000
