flask-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: <DOMAIN>
    http:
      paths:
      - path:
        backend:
          serviceName: flask-demo
          servicePort: <PORT>
